# sessao-certa-api

./: .env_sample  main.py  pyproject.toml  readme.md
config/: __init__.py  db.py  settings.py
docs/: DOCUMENTO DE ANÁLISE DE REQUISITOS DO PROJETO SESSÃO CERTA.md  endpoints.md  plan_test.md
docs/license/: copyright.md
src/: main.py
src/controller/: whatsapp_controller.py
src/domain/entities/: __init__.py  client.py  context.py  customer.py  employee.py  establishment.py  marketing_message.py  payment.py  plan.py  scheduling.py  service.py  stock.py  task_queue.py  user.py
src/domain/interface/: __init__.py  client_interface.py  context_interface.py  customer_interface.py  employee_interface.py  establishment_interface.py  marketing_message_interface.py  payment_interface.py  plan_interface.py  scheduling_interface.py  service_interface.py  stock_interface.py  task_queue_interface.py  (+1 more)
src/models/: __init__.py  client.py  costumer.py  customer.py  employee.py  establishment.py  marketing_menssage.py  marketing_message.py  payment.py  plan.py  scheduling.py  service.py  stock.py  stock_movement.py  stock_product.py  user.py
src/schema/: __init__.py  common_schema.py  customer_schema.py  establishment_schema.py  marketing_schema.py  payment_schema.py  plan_schema.py  scheduling_schema.py  service_schema.py  stock_schema.py  upload_schema.py  user_schema.py
test/: conftest.py  test__db.py  tttt.py
test/suite_test/: conftest.py  test__db.py
test/unit_test/: test_client.py  test_employee.py  test_establishment.py  test_service.py  test_stock.py
(+77 files in other folders)
